EPMRPP-38621: Fix z-index for popups

--- a/app/src/components/inputs/inputDropdown/inputDropdown.scss
+++ b/app/src/components/inputs/inputDropdown/inputDropdown.scss
@@ -82,7 +82,7 @@
   background-color: $COLOR--white-two;
   box-sizing: border-box;
   box-shadow: 0 6px 12px $COLOR--gray-80;
-  z-index: 1;
+  z-index: $Z-INDEX-POPUP;
   cursor: pointer;
 }
 .select-all-block {
